SUBJECT: Fixed various mobile styling.
	Description:
		- Fixed mobiles styles <HelpLegend/>, repositioned icon above the
		bottom-fixed navigation.
		- Fixed mobiles tyles <ResidentCard/>, resized component
		to better scale for smaller screens. Was too wide previously.
		- Fixed mobile styles <ResidentDropdown/>, resized component
		for mobile to provider better legibility and spacing on smaller screens.

 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   src/components/pastdue/PastDueEntry.js
	modified:   src/components/pastdue/PastDueUpdateForm.js
	modified:   src/css/app/HelpLegend.module.scss
	modified:   src/css/app/ResidentCard.module.scss
	modified:   src/css/app/ResidentDropdown.module.scss
	modified:   src/css/pastdue/PastDueUpdateForm.module.scss

--- a/src/css/app/HelpLegend.module.scss
+++ b/src/css/app/HelpLegend.module.scss
@@ -100,3 +100,16 @@
 		}
 	}
 }
+
+@media screen and (max-width: 645px) {
+	.HelpLegend {
+		position: fixed;
+		bottom: 8.5rem;
+		right: 1rem;
+		width: 2.5rem;
+		height: 2.5rem;
+		border-radius: 50%;
+		background-color: hsla(210, 52%, 47%, 1); // hsla(210, 52%, 47%, 1)
+		z-index: 20;
+	}
+}
