--- a/src/css/pastdue/PastDueUpdateForm.module.scss
+++ b/src/css/pastdue/PastDueUpdateForm.module.scss
@@ -3,5 +3,5 @@
 
 .PastDueUpdateForm {
 	@include fill_container;
-	padding: 2rem 1rem;
+	padding: 2rem 0;
 }
